Unit tests added
Warnings corrected